tests/paczka1/fuzzy1/33333948.err
Error in line 1: RCWNF9y A76 9,3
Error in line 2: TkKeBZ A255 28,5
Error in line 17: RCWNF9y A97 93,3
Error in line 24: TkKeBZ A97 61,2
Error in line 27: eldZdu9fnY A97 48,5
